# polychora

./: Cargo.toml
crates/polychora/: Cargo.toml
crates/polychora/src/: app_aetna_ui.rs  app_events.rs  app_gameplay_loop.rs  app_ui.rs  main.rs  material_icons.rs
docs/specs/: aetna-ui-integration-audit-2026-05-09.md
src/: render.rs  vulkan_setup.rs
src/render/: context_init.rs  types.rs
