[workspace]
members = [
    "common",
    "crates/demo",
    "crates/exr-converter",
    "crates/polychora",
    "crates/polychora-plugin-api",
]
exclude = ["crates/polychora-content"]
default-members = ["crates/polychora"]

[package]
name = "higher-dimension-playground"
version = "0.1.0"
edition = "2021"

[lib]
name = "higher_dimension_playground"
path = "src/lib.rs"

[features]
default = []
vte-diagnostics = []

[dependencies]

# The `vulkano` crate is the main crate that you must use to use Vulkan.
vulkano = "0.35"

common = {path="common", features=["ndarray", "nalgebra"]}

exr = "1.73.0"

ndarray = {version="0.17"}
nalgebra = {version="0.34"}

bytemuck = { version = "1.18", features=["derive"] }
image = { version="0.25", features=["rayon"] }
aetna-core = { path = "../../aetna/aetna.polychora-buffer-reuse/crates/aetna-core" }
aetna-vulkano = { path = "../../aetna/aetna.polychora-buffer-reuse/crates/aetna-vulkano" }

# The Vulkan library doesn't provide any functionality to create and handle windows, as
# this would be out of scope. In order to open a window, we are going to use the `winit` crate.
winit = "0.30"
glam = {version = "0.32", features=["bytemuck"]}
ab_glyph = "0.2"
