[package]
name = "polychora"
version = "0.1.0"
edition = "2021"
default-run = "polychora"

[[bin]]
name = "polychora-server"
path = "src/bin/polychora-server.rs"

[features]
default = []
vte-diagnostics = ["higher-dimension-playground/vte-diagnostics"]

[dependencies]
higher-dimension-playground = { path = "../.." }
common = { path = "../../common", features = ["ndarray", "nalgebra"] }
vulkano = "0.35"
winit = "0.30"
clap = { version = "4.6", features = ["derive"] }
ndarray = "0.17"
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
postcard = { version = "1", features = ["use-std"] }
fixed = { version = "1", features = ["serde"] }
egui = "0.34"
egui-winit = { version = "0.34", default-features = false, features = ["links", "wayland", "x11"] }
aetna-core = { path = "../../../../aetna/aetna.polychora-buffer-reuse/crates/aetna-core" }
rodio = "0.22"
ciborium = "0.2"
crc32fast = "1.4"
sha2 = "0.11"
wasmtime = "44"
polychora-plugin-api = { path = "../polychora-plugin-api", features = ["std"] }

[dev-dependencies]
wat = "1"
